# plato-client

./: .gitignore  README.md  TYPESCRIPT_IMPLEMENTATION.md  TYPE_GENERATION_COMPLETE.md  __init__.py  bump-version.sh  bun.lockb  package.json  potato_client.py  pyproject.toml  setup.py
benchmarker/: benchmark_agents.py  explore.py  explore.sh  explore_craigslist.py  main.py  main_sync.py  plot.py  pyproject.toml  server.py  test_resuse_env.py  test_tool_schema.py  tester.py
benchmarker/examples/: amazon_nova_act_example.py  custom_browser_environment.py
benchmarker/models/anthropic/: agent.py  loop.py
benchmarker/models/anthropic/tools/: __init__.py  computer.py  computer_browser.py
benchmarker/models/gemini/: __init__.py  agent.py  computer.py  run.py
benchmarker/models/openai/: utils.py
benchmarker/models/openai/agent/: agent.py
benchmarker/models/openai/computers/: base_playwright.py  computer.py  remote_playwright.py
benchmarker/rob-explorer/: run.py
cli/: advancedmenu.go  build.sh  (+23 more)
python/: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  SDK_ENHANCEMENTS.md  env-config.yml  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py
python/plato/: __init__.py  plato_client.py
python/plato_async/: plato_async_client.py
python/src/plato/: __init__.py  audit_ui.py  cli copy.py  cli.py  client.py  config.py  exceptions.py  flow_executor.py  hub.py  proxy_client.py  sandbox.py  sandbox_sdk.py  sdk.py  sync_env.py  sync_flow_executor.py  sync_sdk.py
python/src/plato/builder/: __init__.py  cli.py  models.py
python/src/plato/examples/: airbnb_tasks.py  costco_tasks.py  craigslist_tasks.py  doordash_tasks.py  espocrm_tasks.py  hubspot_tasks.py  loadtest.py  mattermost_tasks.py  outline_tasks.py  roundcube_tasks.py  snipeit_tasks.py  taiga_tasks.py  test_env.py  test_env_custom_browser.py  test_env_sync.py
python/src/plato/flows/: db_logins.py  load_flows_to_db.py  simulator_artifacts_backup_1761544660.json  updated_artifacts_1761544662.json  updated_artifacts_1761544792.json
python/src/plato/flows/akaunting/: scripts.yaml
python/src/plato/flows/bugsink/: scripts.yaml
python/src/plato/flows/calcom/: scripts.yaml
python/src/plato/flows/discourse/: scripts.yaml
python/src/plato/flows/dolibarr/: scripts.yaml
python/src/plato/flows/doordash/: scripts.yaml
python/src/plato/flows/elasticsearch/: scripts.yaml
python/src/plato/flows/espocrm/: scripts.yaml
python/src/plato/flows/firefly/: scripts.yaml
python/src/plato/flows/fleetbase/: scripts.yaml
python/src/plato/flows/frappebuilder/: scripts.yaml
python/src/plato/flows/frappecrm/: scripts.yaml
python/src/plato/flows/frappeeducation/: scripts.yaml
python/src/plato/flows/frappeerpnext/: scripts.yaml
python/src/plato/flows/frappehelpdesk/: scripts.yaml
python/src/plato/flows/frappeinsights/: scripts.yaml
python/src/plato/flows/frappelms/: scripts.yaml
python/src/plato/flows/frappewiki/: scripts.yaml
python/src/plato/flows/getcalfresh/: scripts.yaml
python/src/plato/flows/gitlab/: scripts.yaml
python/src/plato/flows/grafana/: scripts.yaml
python/src/plato/flows/invoiceninja/: scripts.yaml
python/src/plato/flows/jenkins/: scripts.yaml
python/src/plato/flows/kanboard/: scripts.yaml
python/src/plato/flows/ledgersmb/: scripts.yaml
python/src/plato/flows/listmonk/: scripts.yaml
python/src/plato/flows/mattermost/: scripts.yaml
python/src/plato/flows/mealie/: scripts.yaml
python/src/plato/flows/metabase/: scripts.yaml
python/src/plato/flows/moodle/: scripts.yaml
python/src/plato/flows/nextcloud/: scripts.yaml
python/src/plato/flows/odoo/: scripts.yaml
python/src/plato/flows/odooattendances/: scripts.yaml
python/src/plato/flows/odoocrm/: scripts.yaml
python/src/plato/flows/odoodatarecycle/: scripts.yaml
python/src/plato/flows/odooelearning/: scripts.yaml
python/src/plato/flows/odooemailmarketing/: scripts.yaml
python/src/plato/flows/odooemployees/: scripts.yaml
python/src/plato/flows/odooevents/: scripts.yaml
python/src/plato/flows/odooexpenses/: scripts.yaml
python/src/plato/flows/odoofleet/: scripts.yaml
python/src/plato/flows/odooinventory/: scripts.yaml
python/src/plato/flows/odooinvoicing/: scripts.yaml
python/src/plato/flows/odoolivechat/: scripts.yaml
python/src/plato/flows/odoolunch/: scripts.yaml
python/src/plato/flows/odoomaintenance/: scripts.yaml
python/src/plato/flows/odoomanufacturing/: scripts.yaml
python/src/plato/flows/odoopos/: scripts.yaml
python/src/plato/flows/odooprojects/: scripts.yaml
python/src/plato/flows/odoopurchase/: scripts.yaml
python/src/plato/flows/odoorecruitment/: scripts.yaml
python/src/plato/flows/odoorepairs/: scripts.yaml
python/src/plato/flows/odoorestaurant/: scripts.yaml
python/src/plato/models/: __init__.py  build_models.py  config.py  env.py  eval_results.py  flow.py  sandbox.py  task.py  test_case.py
python/src/plato/test/: test_env.py
python/src/plato/utils/: proxytunnel.py
python/tests/: README.md  plato_test.py  proxy_test.py  simple.py  simple_sync.py  sync_test_reactivate_env.py  test_env.py  test_import.py  test_passthrough.py  test_reactivate_env.py
python/tests/autologin/: test_autologin.py  test_sync_autologin.py
python/tests/integration/: concurrent_test.py  db_tunnel_example.py  proxy_test.py  simple.py  test_backup_espocrm.py  test_db_tunnel.py  test_passthrough.py
python/tests/load/: test_batch_browsers.py  test_espocrm.py  test_noop.py  test_taiga.py
python/tests/public_url/: test_public_url.py
python/tests/unit/: conftest.py  test_async_env.py  test_async_sdk.py  test_sync_env.py  test_sync_sdk.py
sdk/bindings/python/: plato_pb2.py  plato_sdk.py  pyproject.toml
sdk/bindings/python/proto/: plato_pb2.py
sdk/python-sdk/: README.md  pyproject.toml  setup.py  test.py
sdk/python-sdk/examples/: async_monitor_operation.py  monitor_operation_sync.py  monitor_operation_with_events.py
sdk/python-sdk/plato/: __init__.py  async_client.py  client.py
sdk/python-sdk/plato/_generated/: __init__.py  client.py  raw_client.py
(+517 files in other folders)
