[project]
name = "plato-sdk-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "browser-use>=0.1.40",
    "ipdb>=0.13.13",
    "lmnr>=0.5.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "openai>=1.66.3",
    "plato-sdk>=1.0.33",
    "playwright>=1.50.0",
    "scipy>=1.15.3",
]
