[project]
name = "plato-sdk-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "browser-use>=0.1.40",
    "browserbase>=1.4.0",
    "fastapi>=0.115.12",
    "ipdb>=0.13.13",
    "lmnr>=0.5.1",
    "nova-act>=1.0.2734.0",
    "openai>=1.66.3",
    "plato-sdk==1.0.51",
    "playwright>=1.48.0",
    "uvicorn>=0.34.2",
]
