[project]
name = "plato-sdk-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "anthropic>=0.49.0",
    "browser-use>=0.1.40",
    "browserbase>=1.4.0",
    "diskcache>=5.6.3",
    "fastapi>=0.115.12",
    "ipdb>=0.13.13",
    "lmnr>=0.5.1",
    "logfire>=4.3.4",
    "nova-act>=1.0.2734.0",
    "openai>=1.66.3",
    "orjson>=3.10.15",
    "plato-sdk==1.0.64",
    "playwright>=1.48.0",
    "uvicorn>=0.34.2",
    "xvfbwrapper>=0.2.13",
]
