[project]
name = "plato-sdk"
version = "1.0.79"
description = "Plato SDK"
readme = "README.md"
authors = [
    { name = "Pranav Putta", email = "pranav@plato.so" },
    { name = "Rob Farlow", email = "rob@plato.so" },
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "openai>=1.70.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "aioboto3>=15.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "boto3>=1.38.27",
    "typer>=0.17.4",
    "playwright>=1.50.0",
]

[project.scripts]
plato = "plato.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plato"]

[tool.uv.workspace]
members = ["example"]

[dependency-groups]
dev = [
    "playwright>=1.50.0",
    "ipdb>=0.13.13",
]
