[project]
name = "plato-sdk"
version = "1.1.18"
description = "Plato SDK"
readme = "README.md"
authors = [
    { name = "Pranav Putta", email = "pranav@plato.so" },
    { name = "Rob Farlow", email = "rob@plato.so" },
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "openai>=1.70.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "aioboto3>=15.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "boto3>=1.38.27",
    "typer>=0.17.4",
    "playwright>=1.50.0",
]

[project.scripts]
plato = "plato.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plato = ["*.so", "*.dylib", "*.dll", "bin/*", "*.yml", "*.yaml"]

# Mark wheel as platform-specific (not universal)
[tool.wheel]
platlib = true

[tool.uv.workspace]
members = ["example"]

[dependency-groups]
dev = [
    "playwright>=1.50.0",
    "ipdb>=0.13.13",
    "datamodel-code-generator>=0.35.0",
]
