[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-sdk"
version = "0.1.0"
description = "Plato Python SDK with SSE monitoring helpers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Plato", email = "support@plato.so"}
]
keywords = ["plato", "api", "sdk", "sandbox", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/plato-app/plato-python-sdk"
Documentation = "https://docs.plato.so"
Repository = "https://github.com/plato-app/plato-python-sdk"
Issues = "https://github.com/plato-app/plato-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["plato*"]
exclude = ["tests*", "examples*"]

