[project]
name = "plato-sdk"
version = "1.0.0"
description = "Python SDK for Plato sandbox management with Protocol Buffers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
